# crypto-files

./: .gitignore  README.md  SECURITY.md  app.py  explicaco-apresentacao.md  pyproject.toml  requirements.txt
src/crypto_files/: cli.py  crypto_core.py  key_management.py  utils.py
