[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-files"
version = "0.1.0"
description = "CLI para criptografar e descriptografar arquivos com AES-GCM e RSA-OAEP"
authors = [{name = "Alexandre & M365 Copilot"}]
requires-python = ">=3.9"
dependencies = [
    "cryptography>=42.0.0",
]
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
crypto-files = "crypto_files.cli:main"